--- a/modules/core/client/views/sidenav.client.view.html
+++ b/modules/core/client/views/sidenav.client.view.html
@@ -2,7 +2,8 @@
   <div class="sidebar-nav">
     <div class="head">
       <a ui-sref="home">
-        <span><img src="modules/raws/client/img/brand/logo-soos-big.png" width="40px"></span>
+        <img src="modules/raws/client/img/brand/logo-soos-big.png" width="40px" class="logo"></img>
+        <span style="font-size:28px; color:#fff;">SOOS</span>
       </a>
     </div>
     <div class="sidebar">
