--- a/modules/raws/client/views/view-raw.client.view.html
+++ b/modules/raws/client/views/view-raw.client.view.html
@@ -181,7 +181,7 @@
 
 
                     <p class="dimension-title">{{dimension.title()}}</p>
-                    <ul sortable title="dimension.title()" value="dimension.value" multiple="dimension.multiple()" types="dimension.types()" class="dimensions-container list-unstyled">
+                    <ul sortable title="dimension.title()" value="dimension.value" multiple="dimension.multiple()" types="dimension.types()" class="dimensions-container list-unstyled" open="open">
                     </ul>
 
                   </div>
