--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -15,5 +15,7 @@
   <div class="base md-padding">
     <p>Soos is an open source web tool developed at the Data Lab based on the tool RAW to create custom vector-based visualizations on top of the amazing d3.js library. Primarily conceived as a tool for designers and vis geeks, Soos aims at providing a missing
       link between spreadsheet applications (e.g. Microsoft Excel, Apple Numbers, OpenRefine) and vector graphics editors (e.g. Adobe Illustrator, Inkscape, ...).</p>
+
+      <center><a href="https://github.com/weareopensource/roMEANet-SOOS"><i class="fa fa-2x fa-github"></i></a></center>
   </div>
 </section>
