--- a/modules/raws/client/css/raws.css
+++ b/modules/raws/client/css/raws.css
@@ -525,76 +525,80 @@ pre.CodeMirror-placeholder {
 }
 
 .handsontable table{
-    width:100%;
+  width:100%;
 }
 
 .md-tabs-canvas{
-      background: #e1e6ea;
+  background: #e1e6ea;
 }
 md-content.md-default-theme, md-content  {
-    background-color: #ECECEC;
+  background-color: #ECECEC;
 
 }
 
 md-pagination-wrapper.md-center-tabs {
-    margin: 0 auto;
-    position: relative;
-    width: initial;
+  margin: 0 auto;
+  position: relative;
+  width: initial;
 
 
 }
 
 .md-tab{
-    border: 1px solid #e1e6ea;
+  border: 1px solid #e1e6ea;
 
 }
 .md-tab.md-active {
-    background-color: #fff;
-    border-bottom: 0;
-    cursor: default;
+  background-color: #fff;
+  border-bottom: 0;
+  cursor: default;
 }
 
 md-content{
-      border-top: 1px solid #e2e2e2;
+  border-top: 1px solid #e2e2e2;
   box-shadow: #CED2DB 0 1px 2px 0;
 
 }
 md-tabs md-ink-bar {
-    background: rgb(63,81,181);
-    color: rgb(63,81,181);
+  background: rgb(63,81,181);
+  color: rgb(63,81,181);
 }
 
 .raws .download{
-    background: #406490;
+  background: #406490;
   border: 1px solid #406490;
-    color: #fff;
+  color: #fff;
 
-    }
+}
 
 
 .raws .download:disabled{
-    background: grey;
-    color: #fff;
+  background: grey;
+  color: #fff;
 
-    }
+}
 
-  .raws label {
-    color: #9e9e9e;
-   font-size: 1.2rem;
+.raws label {
+  color: #9e9e9e;
+  font-size: 1.2rem;
+}
+
+.raws .list-unstyled {
+  list-style: none;
 }
 
 .raws .list-unstyled md-input-container {
-    display: inline-block;
-    margin: 0;
-    padding: 2px;
-    position: relative;
-    vertical-align: middle;
+  display: inline-block;
+  margin: 0;
+  padding: 2px;
+  position: relative;
+  vertical-align: middle;
 }
 .raws .md-block{
-    display: block;
-    margin: 0;
-    max-height: 300px;
-    overflow: auto;
-    padding: 2px;
-    position: relative;
+  display: block;
+  margin: 0;
+  max-height: 300px;
+  overflow: auto;
+  padding: 2px;
+  position: relative;
 }
