--- a/modules/etls/client/views/view-etl.client.view.html
+++ b/modules/etls/client/views/view-etl.client.view.html
@@ -1,67 +1,57 @@
 <section class="elts">
-  <div flex layout="row" layout-align="space-around center">
-<!--    <md-nav-bar md-selected-nav-item="currentNavItem" nav-bar-aria-label="navigation links">
-      <md-nav-item name="data">
-        Data
-      </md-nav-item>
-      <md-nav-item name="page2">
-        Graphs
-      </md-nav-item>
-      <md-nav-item name="dashboard">
-       Dashboard
-      </md-nav-item>
-      <!-- these require actual routing with ui-router or ng-route, so they
-      won't work in the demo
-      <md-nav-item md-nav-href="#page4" name="page5">Page Four</md-nav-item>
-      <md-nav-item md-nav-sref="app.page5" name="page4">Page Five</md-nav-item>
-      You can also add options for the <code>ui-sref-opts</code> attribute.
-      <md-nav-item md-nav-sref="page6" sref-opts="{reload:true, notify:true}">
-        Page Six
-      </md-nav-item>
-      -->
-    <!--</md-nav-bar>-->
-
-
-
-
-
-    <md-content flex>
-      <md-tabs md-selected="selectedIndex" md-border-bottom md-dynamic-height md-autoselect>
-        <md-tab label="Import">
-          <form>
-            <div ngf-select="vm.upload($event,$file)" ngf-drop ng-model="vm.file" class="drop-box" ngf-drag-over-class="'dragover'" ngf-multiple="false"
-              ngf-allow-dir="false">Select File
-              <span class=""> or Drop File</span></div>
-  </form>
-  </md-tab>
-  <md-tab ng-repeat="table in vm.listTable track by $index" label="{{table.tableid}}" md-on-select="vm.loadTable(table.tableid)">
-            
-    <md-content >
-      <div ng-if="vm.loading[table.tableid]" layout="row" layout-sm="column" layout-align="space-around">
-          <md-progress-circular md-mode="indeterminate"></md-progress-circular>
-        </div>
-      <div layout="column">
-        <div layout="row" layout-align="space-between center">
-          <div>
-            <h4>Viewing Table {{table.tableid}} <i class="fa fa-pencil" ng-click="vm.renameTable()" aria-hidden="true"></i></h4>
-            <p>{{table.rowsCount}} rows, {{table.colsCount}} cols</p>
-          </div>
-          <div>
-            <md-button class="md-raised md-primary" ng-click="vm.deleteTable(table.tableid)">Delete Table</md-button>
-          </div>
-        </div>
-
-        <hot-table ng-if="!vm.loading[table.tableid]" settings="vm.tableSettings" datarows="vm.data[table.tableid]" height="800"
-          width="1600">
-          <hot-column ng-repeat="column in vm.metadata[table.tableid]" data="{{column.label}}" title="vm.title(column)"></hot-column>
-          </hot-table>
+  <md-content flex>
+    <md-tabs md-center-tabs md-border-bottom md-dynamic-height md-autoselect>
+      <md-tab label="Data">
+        <md-content class="md-padding">
+          <md-tabs md-selected="selectedIndex" md-border-bottom md-dynamic-height md-autoselect>
+            <md-tab label="Import">
+              <div layout="row" layout-align="center center">
+                <form>
+                  <div ngf-select="vm.upload($event,$file)" ngf-drop ng-model="vm.file" class="drop-box" ngf-drag-over-class="'dragover'" ngf-multiple="false"
+                    ngf-allow-dir="false">Select File
+                    <span class=""> or Drop File</span></div>
+              </form>
+              </div>
+            </md-tab>
+            <md-tab ng-repeat="table in vm.listTable track by $index" label="{{table.tableid}}" md-on-select="vm.loadTable(table.tableid)">
+              <md-content>
+                <div ng-if="vm.loading[table.tableid]" layout="row" layout-sm="column" layout-align="space-around">
+                  <md-progress-circular md-mode="indeterminate"></md-progress-circular>
+                </div>
+                <div layout="column">
+                  <div layout="row" layout-align="space-between center">
+                    <div>
+                      <h4>Viewing Table {{table.tableid}} <i class="fa fa-pencil" ng-click="vm.renameTable()" aria-hidden="true"></i></h4>
+                      <p>{{table.rowsCount}} rows, {{table.colsCount}} cols</p>
+                    </div>
+                    <div>
+                      <md-button class="md-raised md-primary" ng-click="vm.deleteTable(table.tableid)">Delete Table</md-button>
+                    </div>
+                  </div>
+                  <hot-table ng-if="!vm.loading[table.tableid]" settings="vm.tableSettings" datarows="vm.data[table.tableid]" height="800"
+                    width="1600">
+                    <hot-column ng-repeat="column in vm.metadata[table.tableid]" data="{{column.label}}" title="vm.title(column)"></hot-column>
+                    </hot-table>
+                </div>
+              </md-content>
+            </md-tab>
+          </md-tabs>
+        </md-content>
+      </md-tab>
+      <md-tab label="Charts">
+        <md-content class="md-padding">
           <div layout="row">
-            <ul class="items">
-              <li class="item" ng-repeat="item in vm.metadata[table.tableid]" dnd-dragend="vm.buildQuery(table.tableid)" dnd-draggable="item"
-                dnd-effect-allowed="copy">
-                {{item.label}}
-                </li>
-            </ul>
+            <div flex-gt-sm="20" flex>
+              <div ng-repeat="item in vm.listTable" ng-click=" vm.fetchMetadata(item.tableid)">
+                {{item.tableid}}
+                <ul class="items">
+                  <li class="item" ng-repeat="item2 in vm.metadata[item.tableid]" dnd-dragend="vm.buildQuery(table.tableid)" dnd-draggable="item"
+                    dnd-effect-allowed="copy">
+                    {{item2.label}}
+                    </li>
+                </ul>
+              </div>
+            </div>
             <ul ng-repeat="group in vm.groups" class="groups" dnd-list="group.items" dnd-external-sources="true">
               <li class="title">{{group.name}}</li>
               <li class="item" ng-repeat="item in group.items" dnd-moved="group.items.splice($index, 1);vm.buildQuery(table.tableid)" dnd-draggable="item"
@@ -69,17 +59,17 @@
             </ul>
             <pre> {{vm.modelAsJson}} </pre>
           </div>
-<!--          <highchart id="chart1" config="vm.chartConfig" class=""></highchart>
--->          <div layout="row">
-            <hot-table datarows="vm.item">
+          <div layout="row">
+            <hot-table ng-if="vm.item" datarows="vm.item">
               <hot-column ng-repeat="column in vm.itemMeta" data="{{column}}" title="column"></hot-column>
             </hot-table>
           </div>
-      </div>
-
-    </md-content>
-  </md-tab>
-  </md-tabs>
+        </md-content>
+      </md-tab>
+      <md-tab label="Dashboard">
+        <md-content>
+        </md-content>
+      </md-tab>
+    </md-tabs>
   </md-content>
-  </div>
 </section>
